fix(docs): restore vertical-align on license label

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -36,7 +36,7 @@
   float: right;
   font-size: 0.6rem;
   font-weight: normal;
-  line-height: 0.9rem;
+  vertical-align: middle;
   opacity: 0.7;
 }
 
